examples/foo.co
fun create() *int


// fun ownership_drop_params(x, y *int) void {
// } // drop(y); drop(x)

// fun ownership_drop_param2(x, y *int) *int {
//   x
// } // drop(y)

// fun ownership_drop_var(x, y, z *int) {
//   var a *int = x
//   var b *int = y
//   var c *int = z
// } // drop(c); drop(b); drop(a)

// fun ownership_drop_in_scope(x, y *int) *int {
//   // var k *int
//   {
//     let b = x    // transfer ownership of value at x to b
//     // let c = k // error: use of uninitialized variable
//     // let c = x // error: use of dead value
//   }              // drop(b)
//   // let c = x   // error: use of dead value
//   return y       // transfer ownership of y to caller
// }

// fun ownership_drop_via_block(x, y *int) *int {
//   let a = {
//     let b = x // transfer ownership of value at x to b
//     b         // transfer ownership of value at b to block
//   }           // transfer ownership of block value to a
//   return y    // transfer ownership of y to caller
// }             // drop(a)

// fun ownership_drop_ifthen_ret(x, y, z *int) *int {
//   if true {
//     return x // transfer ownership of x to caller
//   }          // drop(z), drop(y)
//   let k = *x // ok since x is alive here
//   return y   // transfer ownership of y to caller
// }            // drop(z), drop(x)

// fun ownership_drop_ifelse_ret(x, y *int) *int {
//   if true {
//   } else {
//     return x // transfer ownership of x to caller
//   }          // drop(y)
//   let k = *x // ok since x is alive here
//   return y   // transfer ownership of y to caller
// }            // drop(x)

// fun ownership_drop_unused_if(x, y *int) *int {
//   if true {} else {}
//   return y // transfer ownership of y to caller
// }          // drop(x)

// fun ownership_drop_ifthen_drop(x, y *int) *int {
//   let k = y
//   if true {
//     let a = x
//   }            // drop(a)
//                // drop(x) in implicit "else" branch
//   // let b = x // error: use of dead value
//   return k     // transfer ownership of y to caller
// }

// fun ownership_drop_ifelse_drop(x, y *int) *int {
//   let k = y
//   if true {    // drop(x)
//   } else {
//     let a = x
//   }            // drop(a)
//   // let a = x // error: use of dead value
//   return k     // transfer ownership of y to caller
// }

// fun ownership_drop_ifthenelse_drop(x, y *int) *int {
//   let k = y
//   if true {
//     let a = x
//   } else {     // drop(a)
//   }            // drop(x)
//   // let a = x // error: use of dead value
//   return k     // transfer ownership of y's value to caller
// }


// fun ownership_drop_one_of(x, y *int) *int {
//   if true {
//     create()
//   }
//   return x // transfer ownership of if's value to caller
// }


// fun ownership_drop_one_of(x, y *int) *int {
//   let result = if true {
//     x          // transfer ownership of x's value to "then" block
//   } else {     // drop(y)
//     y          // transfer ownership of y's value to "else" block
//   }            // drop(x)
//   // let a = *x // error: use of dead value
//   // let b = *y // error: use of dead value
//   return result // transfer ownership of if's value to caller
// }


// fun ownership_drop_inner_ifthen(x *int) *int {
//   if true {
//     let a = create()
//   }        // drop(a)
//   return x // transfer ownership of x's value to caller
// }


// fun ownership_drop_ifthen(x, y *int) *int {
//   if true {
//     let a = y
//   }        // drop(a); drop(y) in implicit "else" branch
//   return x // transfer ownership of x's value to caller
// }


fun ownership_drop_ifthen_inner(x *int) *int {
  if true {
    let a = create()
    if true {
      let _ = *a // make the IR easier to read
      let b = a
    }            // drop(b); drop(a) in implicit "else" branch
  }
  return x       // transfer ownership of if's value to caller
}


fun ownership_drop_one_of(x, y *int) *int {
  let result = if true {
    let a = create()
    let b = create()
    if true {
      let a2 = a
    }           // drop(a2); drop(a) in implicit "else" branch
    x           // transfer ownership of x's value to "then" block
  } else {      // drop(b)
    y           // transfer ownership of y's value to "else" block
  }             // drop(z)
  // let a = *x // error: use of dead value
  // let b = *y // error: use of dead value
                // conditionally drop(x) or drop(y)
  return result // transfer ownership of if's value to caller
}


// fun ownership_drop_one_of2(x, y, z *int) *int {
//                // var x_islive = true
//                // var y_islive = true
//   let a = if true {
//     let b = if true {
//       x        // transfer ownership of x's value to "then" block
//     } else {
//       y        // transfer ownership of y's value to "else" block
//     }
//     b
//   } else {
//     y          // transfer ownership of y's value to "else" block
//   }
//                // if !x_islive drop(x); if !y_islive drop(y)
//   return a     // transfer ownership of if's value to caller
// }





/*
fun ownership_drop_in_scope(x *int, y *int) *int {
  b0:
    v0  *int = ARG    0         # [1] x {dst=x}           examples/foo.co:21:29
    v1  *int = ARG    1         # [1] y {dst=y}           examples/foo.co:21:32
    v2  *int = MOVE   v0        # [0] {dst=k src=x}       examples/foo.co:23:5
    DROP   v0                   # [0]                     examples/foo.co:25:3
  ret v1
}
*/

// fun ir_params(x, y int) int {
//   x * y
// }

// fun ir_redundant_local(x, y int) int {
//   var b = y // storage unused
//   x * b     // b just points to y, not local storage
// }

// fun ir_if_then_result_ret(x, y int) int {
//   if x > y {
//     return x - y
//   }
//   x + y
// }

// fun ir_cond_assign(x, y int) int {
//   var a = x
//   if x > y {
//     a = y
//     if x < y {
//       a = x
//     }
//   }
//   a
// }

// fun ir_if_else_result(x, y int) int {
//   if x > y {
//     x - y
//   } else {
//     x + y
//   }
// }

// fun ir_if_else_result2(x, y int) int {
//   2 * if x > y {
//     x - y
//   } else {
//     x + y + 2 + 4 + 1
//   }
// }

// fun ownership_drop_param(x *int) {
// }

